force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Donde_lo_vendio__c.field-meta.xml
<CustomField>
    <fullName>AM_Donde_lo_vendio__c</fullName>
    <inlineHelpText>Indique donde se vendió el vehículo.</inlineHelpText>
    <label>¿Dónde lo vendió?</label>
    <length>20</length>
    <type>Text</type>
</CustomField>