force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Es_un_HONDA_adicional__c.field-meta.xml
<CustomField>
    <fullName>AM_Es_un_HONDA_adicional__c</fullName>
    <label>¿Es un HONDA adicional?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
            <value>
                <fullName>Reemplazo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>