force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Estado1__c.field-meta.xml
<CustomField>
    <fullName>AM_Estado1__c</fullName>
    <description>Estado del cliente</description>
    <label>Estado V</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activo</fullName>
            </value>
            <value>
                <fullName>Inactivo</fullName>
                <default>true</default>
                <label>Inactivo</label>
            </value>
            <value>
                <fullName>Fallecido</fullName>
                <isActive>false</isActive>
                <label>Fallecido</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>