force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Etapa__c.field-meta.xml
<CustomField>
    <fullName>AM_Etapa__c</fullName>
    <description>Etapa de la oportunidad de cierre del Negocio</description>
    <inlineHelpText>P0--&gt;6   a  12   meses
P1--&gt;2   a   6    meses
P2--&gt;1   a   2    meses
P3--&gt;1   mes
PU--&gt; Ganado
PC--&gt; Perdido
PSI--&gt; Mas de 1 año</inlineHelpText>
    <label>Categoria Oportunidad Negocio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P0</fullName>
                <default>true</default>
                <label>P0</label>
            </value>
            <value>
                <fullName>P1</fullName>
            </value>
            <value>
                <fullName>P2</fullName>
            </value>
            <value>
                <fullName>P3</fullName>
            </value>
            <value>
                <fullName>P4</fullName>
            </value>
            <value>
                <fullName>P5</fullName>
            </value>
            <value>
                <fullName>PU</fullName>
            </value>
            <value>
                <fullName>PC</fullName>
            </value>
            <value>
                <fullName>PSI</fullName>
            </value>
            <value>
                <fullName>PSP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>