force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Fecha_Actualizado_Historico__c.field-meta.xml
<CustomField>
    <fullName>AM_Fecha_Actualizado_Historico__c</fullName>
    <label>Fecha Actualizado Historico</label>
    <type>Date</type>
</CustomField>