force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Fecha_creacion_cotizacion_solo_Fecha__c.field-meta.xml
<CustomField>
    <fullName>AM_Fecha_creacion_cotizacion_solo_Fecha__c</fullName>
    <formula>DATEVALUE (AM_Fecha_de_creacion__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha creacion cotizacion solo fecha</label>
    <type>Date</type>
</CustomField>