force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Fecha_de_cierre__c.field-meta.xml
<CustomField>
    <fullName>AM_Fecha_de_cierre__c</fullName>
    <description>Fecha probable del cierre del negocio</description>
    <label>Fecha estimada de compra</label>
    <type>Date</type>
</CustomField>