force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Fecha_de_creacion__c.field-meta.xml
<CustomField>
    <fullName>AM_Fecha_de_creacion__c</fullName>
    <label>Fecha de creacion</label>
    <type>DateTime</type>
</CustomField>