force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Fecha_de_factura__c.field-meta.xml
<CustomField>
    <fullName>AM_Fecha_de_factura__c</fullName>
    <label>Fecha de factura</label>
    <type>Date</type>
</CustomField>