force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Fecha_de_seguimien_comentario_gerente__c.field-meta.xml
<CustomField>
    <fullName>AM_Fecha_de_seguimien_comentario_gerente__c</fullName>
    <inlineHelpText>Fecha de comentario seguimiento gerente</inlineHelpText>
    <label>Fecha comentario seguimiento gerente</label>
    <type>Date</type>
</CustomField>