force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Fecha_de_vigencia__c.field-meta.xml
<CustomField>
    <fullName>AM_Fecha_de_vigencia__c</fullName>
    <defaultValue>DATE
(
	YEAR
	(
		TODAY()
	), 
	MONTH
	(
		TODAY()
	),
	CASE
	(
		MONTH(TODAY()),
		1, 31,
		2, 28,
		3, 31,
		4, 30,
		5, 31,
		6, 30,
		7, 31,
		8, 31,
		9, 30,
		10, 31,
		11, 30,
		12, 31,
		30
	)
)</defaultValue>
    <label>Fecha de vigencia</label>
    <type>Date</type>
</CustomField>