force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Fecha_digitalizacion__c.field-meta.xml
<CustomField>
    <fullName>AM_Fecha_digitalizacion__c</fullName>
    <label>Fecha digitalizacion</label>
    <type>Date</type>
</CustomField>