force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Fecha_inicio_garantia__c.field-meta.xml
<CustomField>
    <fullName>AM_Fecha_inicio_garantia__c</fullName>
    <label>Fecha inicio garantia</label>
    <type>Date</type>
</CustomField>