force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Financiera_Simulacion3__c.field-meta.xml
<CustomField>
    <fullName>AM_Financiera_Simulacion3__c</fullName>
    <label>Financiera</label>
    <length>50</length>
    <type>Text</type>
</CustomField>