force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Fondo_de_Garantias__c.field-meta.xml
<CustomField>
    <fullName>AM_Fondo_de_Garantias__c</fullName>
    <formula>((AM_Subtotal_Saldo_a_financiar_Pagare__c * AM_Porcentaje_Fondo_de_Garantia__c )+(AM_Subtotal_Saldo_a_financiar_Pagare__c * AM_Porcentaje_Fondo_de_Garantia__c)* AM_Porcentaje_IVA__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fondo de Garantias</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>