force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Foto_Modelo_sugerido__c.field-meta.xml
<CustomField>
    <fullName>AM_Foto_Modelo_sugerido__c</fullName>
    <formula>IMAGE 
( 
IF 
( 
NOT 
( 
ISBLANK( AM_Modelo_sugerido_1__r.AM_Codigo_de_producto__c ) 
), 
AM_Modelo_sugerido_1__r.AM_URL_foto__c, 
&quot;https://c.na15.content.force.com/servlet/servlet.ImageServer?id=015o0000000hzS9&amp;oid=00Do0000000aReC&amp;lastMod=1383010138000&quot; 
), 
&quot;Imagen no disponible&quot;, 
149, 
270 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Foto Modelo sugerido</label>
    <type>Text</type>
</CustomField>