force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Impuesto_al_consumo_S2__c.field-meta.xml
<CustomField>
    <fullName>AM_Impuesto_al_consumo_S2__c</fullName>
    <label>% Impuesto al consumo sugerido 2</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>