force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Informacion_Usuario_Identidad__c.field-meta.xml
<CustomField>
    <fullName>AM_Informacion_Usuario_Identidad__c</fullName>
    <description>Informacion del usuario para informes</description>
    <formula>AM_Usuario_motocicleta__r.AM_Numero_de_documento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Informacion del usuario para informes</inlineHelpText>
    <label>Usuario numero documento</label>
    <type>Text</type>
</CustomField>