force-app/main/default/objects/AM_Oportunidad__c/fields/AM_IVA_Canon_Renting1__c.field-meta.xml
<CustomField>
    <fullName>AM_IVA_Canon_Renting1__c</fullName>
    <label>IVA Canon</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>