force-app/main/default/objects/AM_Oportunidad__c/fields/AM_IVA_valor_S1__c.field-meta.xml
<CustomField>
    <fullName>AM_IVA_valor_S1__c</fullName>
    <formula>ROUND(((AM_Precio_de_lista_S1__c / (1 + (AM_Porcentaje_IVA__c + AM_Impuesto_al_consumo_S1__c))) - AM_Valor_descuento__c) * AM_Porcentaje_IVA__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor IVA sugerido 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>