force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Kilometraje_Renting3__c.field-meta.xml
<CustomField>
    <fullName>AM_Kilometraje_Renting3__c</fullName>
    <label>Kilometraje a recorrer en el año</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>