force-app/main/default/objects/AM_Oportunidad__c/fields/AM_La_empresa_vendi_algun_vehiculo__c.field-meta.xml
<CustomField>
    <fullName>AM_La_empresa_vendi_algun_vehiculo__c</fullName>
    <description>¿La empresa vendio algunos de estos para comprar el que se le esta entregando hoy?</description>
    <inlineHelpText>¿La empresa vendio algunos de estos para comprar el que se le esta entregando hoy?</inlineHelpText>
    <label>La empresa vendió algun vehiculo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>