force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Linea_competencia__c.field-meta.xml
<CustomField>
    <fullName>AM_Linea_competencia__c</fullName>
    <label>Linea competencia</label>
    <length>30</length>
    <type>Text</type>
</CustomField>