force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Linea_Modelo__c.field-meta.xml
<CustomField>
    <fullName>AM_Linea_Modelo__c</fullName>
    <inlineHelpText>Coloque descripción del vehículo adicional del cliente.</inlineHelpText>
    <label>Linea / Modelo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>