force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Marca_Linea_Modelo_Historico1__c.field-meta.xml
<CustomField>
    <fullName>AM_Marca_Linea_Modelo_Historico1__c</fullName>
    <inlineHelpText>Descripción del vehículo de otra marca que posee el cliente.</inlineHelpText>
    <label>Marca/Linea/Modelo.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>