force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Marca_Linea_Modelo_Vehiculo_anterior__c.field-meta.xml
<CustomField>
    <fullName>AM_Marca_Linea_Modelo_Vehiculo_anterior__c</fullName>
    <label>Vehiculo Anterior_Marca/Linea/Modelo</label>
    <length>200</length>
    <type>Text</type>
</CustomField>