force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Modelo_sugerido_2__c.field-meta.xml
<CustomField>
    <fullName>AM_Modelo_sugerido_2__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Modelo sugerido 2</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>El modelo buscado no existe o no está activo.</errorMessage>
        <filterItems>
            <field>AM_Producto__c.AM_Activo__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AM_Producto__c</referenceTo>
    <relationshipName>Oportunidades2</relationshipName>
    <type>Lookup</type>
</CustomField>