force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Movil_propietario__c.field-meta.xml
<CustomField>
    <fullName>AM_Movil_propietario__c</fullName>
    <formula>Owner:User.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Móvil propietario</label>
    <type>Text</type>
</CustomField>