force-app/main/default/objects/AM_Oportunidad__c/fields/AM_N_Propietario__c.field-meta.xml
<CustomField>
    <fullName>AM_N_Propietario__c</fullName>
    <description>Numero de propietarios que ha tenido el vehiculo.</description>
    <label>N° Propietario</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>