force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Nombre_Usado__c.field-meta.xml
<CustomField>
    <fullName>AM_Nombre_Usado__c</fullName>
    <formula>Text(Marca_usado__c) &amp; &quot; &quot; &amp; Linea_usado__c &amp; &quot; &quot; &amp; Version_usado__c &amp; &quot; &quot; &amp; Color_usado__c &amp; &quot; &quot; &amp; TEXT(Ano_modelo_usado__c)</formula>
    <label>Nombre Usado</label>
    <type>Text</type>
</CustomField>