force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Nota_Otros_Descuentos__c.field-meta.xml
<CustomField>
    <fullName>AM_Nota_Otros_Descuentos__c</fullName>
    <description>En este campo se deben registrar los descuentos corporativos como por ejemplo: Dcto Adeinco, Dcto HMCL.</description>
    <inlineHelpText>En este campo se deben registrar los descuentos corporativos como por ejemplo: Dcto Adeinco, Dcto HMCL. Se debe colocar unicamente el nombre del descuento y valor.</inlineHelpText>
    <label>Nota Otros Descuentos</label>
    <length>80</length>
    <type>Text</type>
</CustomField>