force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Nota_Vehiculo_Usado__c.field-meta.xml
<CustomField>
    <fullName>AM_Nota_Vehiculo_Usado__c</fullName>
    <label>Nota Vehiculo Usado</label>
    <length>80</length>
    <type>Text</type>
</CustomField>