force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Nro_Motor__c.field-meta.xml
<CustomField>
    <fullName>AM_Nro_Motor__c</fullName>
    <label>Nro Motor</label>
    <length>80</length>
    <type>Text</type>
</CustomField>