force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Numero_de_dias_seguimiento__c.field-meta.xml
<CustomField>
    <fullName>AM_Numero_de_dias_seguimiento__c</fullName>
    <formula>TODAY() - AM_Prueba_SOLO_Fecha_Actividad__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numero de dias seguimiento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>