force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Numero_de_documento_cliente__c.field-meta.xml
<CustomField>
    <fullName>AM_Numero_de_documento_cliente__c</fullName>
    <formula>IF
	(
		NOT(ISBLANK(AM_Propietario_motocicleta__c)),
		AM_Propietario_motocicleta__r.AM_Numero_de_documento__c,
		&quot;Usuario o propietario de la motocicleta sin documento registrado&quot;
	)</formula>
    <label>Número de documento</label>
    <type>Text</type>
</CustomField>