force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Numero_de_factura__c.field-meta.xml
<CustomField>
    <fullName>AM_Numero_de_factura__c</fullName>
    <label>Número de factura</label>
    <length>25</length>
    <type>Text</type>
</CustomField>