force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Numero_de_pre_liquidacion__c.field-meta.xml
<CustomField>
    <fullName>AM_Numero_de_pre_liquidacion__c</fullName>
    <description>Campo para almacenar el número de pre-liquidación devuelto por Sipres</description>
    <label>Número de pre-liquidación</label>
    <length>50</length>
    <type>Text</type>
</CustomField>