force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Numero_de_radicacion__c.field-meta.xml
<CustomField>
    <fullName>AM_Numero_de_radicacion__c</fullName>
    <label>Número de radicación</label>
    <length>10</length>
    <type>Text</type>
</CustomField>