force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Observaciones__c.field-meta.xml
<CustomField>
    <fullName>AM_Observaciones__c</fullName>
    <label>Observaciones</label>
    <length>150</length>
    <type>Text</type>
</CustomField>