force-app/main/default/objects/AM_Oportunidad__c/fields/AM_ObservacionesL__c.field-meta.xml
<CustomField>
    <fullName>AM_ObservacionesL__c</fullName>
    <label>Observaciones</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>