force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Otra_Marca__c.field-meta.xml
<CustomField>
    <fullName>AM_Otra_Marca__c</fullName>
    <label>Marca retoma</label>
    <length>20</length>
    <type>Text</type>
</CustomField>