force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Otra_razon_no_compra__c.field-meta.xml
<CustomField>
    <fullName>AM_Otra_razon_no_compra__c</fullName>
    <label>Marca competencia</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>AM_Etapa__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>AUDI</fullName>
            </value>
            <value>
                <fullName>BMW</fullName>
            </value>
            <value>
                <fullName>CHEVROLET</fullName>
            </value>
            <value>
                <fullName>CITROEN</fullName>
            </value>
            <value>
                <fullName>DODGE</fullName>
            </value>
            <value>
                <fullName>FORD</fullName>
            </value>
            <value>
                <fullName>FOTON</fullName>
            </value>
            <value>
                <fullName>HYUNDAI</fullName>
            </value>
            <value>
                <fullName>JAC</fullName>
            </value>
            <value>
                <fullName>JEEP</fullName>
            </value>
            <value>
                <fullName>KIA</fullName>
            </value>
            <value>
                <fullName>LAND ROVER</fullName>
            </value>
            <value>
                <fullName>MAZDA</fullName>
            </value>
            <value>
                <fullName>MERCEDES</fullName>
            </value>
            <value>
                <fullName>MINICOOPER</fullName>
            </value>
            <value>
                <fullName>MITSUBISHI</fullName>
            </value>
            <value>
                <fullName>NISSAN</fullName>
            </value>
            <value>
                <fullName>PEUGEUT</fullName>
            </value>
            <value>
                <fullName>RENAULT</fullName>
            </value>
            <value>
                <fullName>SSANGYONG</fullName>
            </value>
            <value>
                <fullName>SEAT</fullName>
            </value>
            <value>
                <fullName>SUBARU</fullName>
            </value>
            <value>
                <fullName>SUZUKI</fullName>
            </value>
            <value>
                <fullName>TOYOTA</fullName>
            </value>
            <value>
                <fullName>VOLKSWAGEN</fullName>
            </value>
            <value>
                <fullName>VOLVO</fullName>
            </value>
            <value>
                <fullName>SKODA</fullName>
            </value>
            <value>
                <fullName>FIAT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>