force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Otro_Placa__c.field-meta.xml
<CustomField>
    <fullName>AM_Otro_Placa__c</fullName>
    <label>Placa retoma</label>
    <length>20</length>
    <type>Text</type>
</CustomField>