force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Placa__c.field-meta.xml
<CustomField>
    <fullName>AM_Placa__c</fullName>
    <inlineHelpText>Formato de la placa del vehiculo ABC123 (Tres letras, tres numeros).</inlineHelpText>
    <label>Placa</label>
    <length>6</length>
    <type>Text</type>
</CustomField>