force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Plan_de_financiacion__c.field-meta.xml
<CustomField>
    <fullName>AM_Plan_de_financiacion__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Plan de financiación</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>El plan de financiación buscado no existe o no está activo.</errorMessage>
        <filterItems>
            <field>AM_Plan_financiacion__c.AM_Activo__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AM_Plan_financiacion__c</referenceTo>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>