force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Plazo_Renting3__c.field-meta.xml
<CustomField>
    <fullName>AM_Plazo_Renting3__c</fullName>
    <label>Plazo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>24</fullName>
            </value>
            <value>
                <fullName>36</fullName>
            </value>
            <value>
                <fullName>48</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>