force-app/main/default/objects/AM_Oportunidad__c/fields/AM_Plazo_Simulacion1__c.field-meta.xml
<CustomField>
    <fullName>AM_Plazo_Simulacion1__c</fullName>
    <label>Plazo (Meses)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>